[ux] fix spacing on venue

--- a/css/main.css
+++ b/css/main.css
@@ -219,6 +219,7 @@ input[type=email]:focus {
 --------------------------------------------------------------------*/
 
 .venue figure {
+  margin-right: 20px;
   margin-bottom: 30px;
   width: auto;
 }
